# GMachine

./: .project  GMachine.cabal  README.md
src/: .gitignore  Evaluator.hs  Grammar.y  Language.hs  Main.hs  Tokens.x  Utils.hs
