name:           GMachine
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Koehler

executable GMachine
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4, 
                   containers
  ghc-options:     -Wall -rtsopts -O2
  other-modules:   
                   Evaluator,
                   Utils

